--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<link rel="icon" type="image/x-icon" href="../images/favicon.png">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../css/style.css">
+<meta charset="UTF-8">
 
+<title>Arcade</title>
+
+<body style="background-color: #003154;"></body>
+
+<p align="center"><iframe src="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/mariokart.gba" width="512" height="288" id="iframe"></iframe></p>
