--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" href="../css/style.css">
 <meta charset="UTF-8">
 
-<title>Arcade</title>
+<title>Homepage</title>
 
 <body style="background-color: #003154;"></body>
 
-<p align="center"><iframe src="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/mariokart.gba" width="512" height="288" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/mariokart.gba" width="512" height="384" id="iframe"></iframe></p>
