--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
 
 <body style="background-color: #003154;"></body>
 
-<p align="center"><iframe src="www-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://sites.google.com/site/s017q3e/moto-x3m.xml" width="512" height="384" id="iframe"></iframe></p>
+<p align="center"><iframe src="www-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://sites.google.com/site/s017q3e/moto-x3m.xml" width="512" height="384" style="border: 0px;" id="iframe"></iframe></p>
