--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <title>Homepage</title>
 
-<body style="background-color: #003154;"></body>
+<body style="background-color: #001b2e;"></body>
 
 <p align="center"><iframe src="https://www-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://sites.google.com/site/s017q3e/moto-x3m.xml" width="800" height="450" style="border: 0px;" id="iframe"></iframe></p>
