--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <title>Homepage</title>
 
-<body style="background: url(images/background.png); background-repeat: no-repeat; background-size: vw vh; background-position: center center; background-attachment: fixed;"></body>
+<body style="background-color: #001b2e;"></body>
 
 <p align="center"><iframe src="https://www-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://sites.google.com/site/s017q3e/moto-x3m.xml" width="900" height="596" style="border: 0px; margin-top: 20px;" id="iframe"></iframe></p>
