--- a/games/snow-rider-3d.html
+++ b/games/snow-rider-3d.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="../css/style.css">
 <meta charset="UTF-8">
 
-<title>Homepage</title>
+<title>Classes</title>
 
 <body style="background-color: #001b2e;"></body>
 
