--- a/dump/text.html
+++ b/dump/text.html
@@ -6,5 +6,5 @@
     
     <div class="test1">
     <b><a href="../games/moto-x3m.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M</a><br>
-    <b><a href="../game-pages/donkey-kong.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Donkey Kong</a><br>
+    <b><a href="../games/" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Donkey Kong</a><br>
     </div>
