--- a/games/snow-rider-3d.html
+++ b/games/snow-rider-3d.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<link rel="icon" type="image/x-icon" href="./images/favicon.png">
+<link rel="icon" type="image/x-icon" href="/images/favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="/css/style.css">
 <meta charset="UTF-8">
 
 <title>Classes</title>
