--- a/dump/text.html
+++ b/dump/text.html
@@ -5,6 +5,6 @@
     </style>
     
     <div class="test1">
-    <b><a href="../games/moto-x3m.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M</a><br>
-    <b><a href="../games/" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Donkey Kong</a><br>
+    <b><a href="/games/moto-x3m.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M</a><br>
+    <b><a href="/games/snow-rider-3d.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Snow Rider 3D</a><br>
     </div>
