--- a/games/thps2.html
+++ b/games/thps2.html
@@ -11,3 +11,7 @@
 <body style="background-color: #001b2e;"></body>
 
 <p align="center"><iframe src="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/thps2.gba" width="900" height="596" style="border: 0px; margin-top: 20px;" id="iframe"></iframe></p>
+
+<div class="text">
+<embed src="/dump/text.html">
+</div>
