--- a/dump/text.html
+++ b/dump/text.html
@@ -1,10 +1,13 @@
 <style>
-    .test1 {
-        line-height: 125%;
-    }
-    </style>
+.test1 {
+    line-height: 125%;
+}
+</style>
     
-    <div class="test1">
-    <b><a href="/games/moto-x3m.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M</a><br>
-    <b><a href="/games/snow-rider-3d.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Snow Rider 3D</a><br>
-    </div>
+<div class="test1">
+<b><a href="/games/moto-x3m.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M</a><br>
+<b><a href="/games/snow-rider-3d.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Snow Rider 3D</a><br>
+<b><a href="/games/super-mario-bros.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Super Mario Bros.</a><br>
+<b><a href="/games/thps2.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tony Hawk Pro Skater: 2</a><br>
+
+</div>
