--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<link rel="icon" type="image/x-icon" href="../images/favicon.png">
+<link rel="icon" type="image/x-icon" href="/images/favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="/css/style.css">
 <meta charset="UTF-8">
 
 <title>Homepage</title>
 
 <body style="background-color: #001b2e;"></body>
 
-<p align="center"><iframe src="https://www-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://sites.google.com/site/s017q3e/moto-x3m.xml" width="900" height="596" style="border: 0px; margin-top: 20px;" id="iframe"></iframe></p>
+<div class="text">
+<embed src="/dump/text.html">
+</div>
