--- a/games/google-baseball.html
+++ b/games/google-baseball.html
@@ -10,7 +10,7 @@
 
 <body style="background-color: #001b2e;"></body>
 
-<p align="center"><iframe src="https://www.google.com/logos/2019/july4th19/r6/july4th19.html?hl=en&sdoodles=1" width="900" height="596" style="border: 0px; margin-top: 20px;" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://www.google.com/logos/2019/july4th19/r6/july4th19.html?hl=en&sdoodles=1" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
