--- a/games/moto-x3m.html
+++ b/games/moto-x3m.html
@@ -10,7 +10,7 @@
 
 <body style="background-color: #001b2e;"></body>
 
-<p align="center"><iframe src="https://www-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://sites.google.com/site/s017q3e/moto-x3m.xml" width="900" height="596" style="border: 0px; margin-top: 20px;" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://www-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://sites.google.com/site/s017q3e/moto-x3m.xml" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
