--- a/games/moto-x3m.html
+++ b/games/moto-x3m.html
@@ -10,6 +10,8 @@
 
 <body style="background-color: #001b2e;"></body>
 
+<div class="border"></div>
+
 <p align="center"><iframe src="https://www-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://sites.google.com/site/s017q3e/moto-x3m.xml" id="iframe"></iframe></p>
 
 <div class="text">
