--- a/games/google-baseball.html
+++ b/games/google-baseball.html
@@ -10,6 +10,8 @@
 
 <body style="background-color: #001b2e;"></body>
 
+<div class="border"></div>
+
 <p align="center"><iframe src="https://www.google.com/logos/2019/july4th19/r6/july4th19.html?hl=en&sdoodles=1" id="iframe"></iframe></p>
 
 <div class="text">
