--- a/games/gun-mayhem-2.html
+++ b/games/gun-mayhem-2.html
@@ -10,6 +10,8 @@
 
 <body style="background-color: #001b2e;"></body>
 
+<div class="border"></div>
+
 <p align="center"><iframe src="twoplayergames.org/gameframe/gun-mayhem-2-more-mayhem" id="iframe"></iframe></p>
 
 <div class="text">
