--- a/games/super-mario-bros.html
+++ b/games/super-mario-bros.html
@@ -10,6 +10,8 @@
 
 <body style="background-color: #001b2e;"></body>
 
+<div class="border"></div>
+
 <p align="center"><iframe src="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/new-website/webretro/roms/super_mario_bros.nes" id="iframe"></iframe></p>
 
 <div class="text">
