--- a/games/thps2.html
+++ b/games/thps2.html
@@ -10,6 +10,8 @@
 
 <body style="background-color: #001b2e;"></body>
 
+<div class="border"></div>
+
 <p align="center"><iframe src="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/thps2.gba" id="iframe"></iframe></p>
 
 <div class="text">
