--- a/games/gun-mayhem-2.html
+++ b/games/gun-mayhem-2.html
@@ -12,7 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="twoplayergames.org/gameframe/gun-mayhem-2-more-mayhem" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://twoplayergames.org/gameframe/gun-mayhem-2-more-mayhem" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
