--- a/dump/text.html
+++ b/dump/text.html
@@ -1,15 +1,19 @@
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+</style>
+
+<style>
 .test1 {
     line-height: 125%;
 }
 </style>
     
 <div class="test1">
-<b><a href="/games/google-baseball.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Google Baseball</a><br>
-<b><a href="/games/gun-mayhem-2.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Gun Mayhem 2</a><br>
-<b><a href="/games/moto-x3m.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M</a><br>
-<b><a href="/games/snow-rider-3d.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Snow Rider 3D</a><br>
-<b><a href="/games/super-mario-bros.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Super Mario Bros.</a><br>
-<b><a href="/games/thps2.html" style="font-family: Arial; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tony Hawk Pro Skater: 2</a><br>
+<b><a href="/games/google-baseball.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Google Baseball</a><br>
+<b><a href="/games/gun-mayhem-2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Gun Mayhem 2</a><br>
+<b><a href="/games/moto-x3m.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M</a><br>
+<b><a href="/games/snow-rider-3d.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Snow Rider 3D</a><br>
+<b><a href="/games/super-mario-bros.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Super Mario Bros.</a><br>
+<b><a href="/games/thps2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tony Hawk Pro Skater: 2</a><br>
 
 </div>
