--- a/dump/text.html
+++ b/dump/text.html
@@ -13,6 +13,7 @@
 <b><a href="/games/google-baseball.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Google Baseball</a><br>
 <b><a href="/games/gun-mayhem-2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Gun Mayhem 2</a><br>
 <b><a href="/games/moto-x3m.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M</a><br>
+<b><a href="/games/shell-shockers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Shell Shockers</a><br>
 <b><a href="/games/snow-rider-3d.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Snow Rider 3D</a><br>
 <b><a href="/games/super-mario-bros.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Super Mario Bros.</a><br>
 <b><a href="/games/thps2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tony Hawk Pro Skater: 2</a><br>
