--- a/games/curveball.html
+++ b/games/curveball.html
@@ -12,7 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="extrememath.cyou/swf?notebook=curveball" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://extrememath.cyou/swf?notebook=curveball" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
