--- a/games/curveball.html
+++ b/games/curveball.html
@@ -12,7 +12,10 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="https://extrememath.cyou/swf?notebook=curveball" id="iframe"></iframe></p>
+<p align="center"><script src="https://minecraftgamingbug.github.io/ruffleembedsetup112/ruffle/ruffle.js"></script>
+    <div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
+            <embed height="480" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="/swf/curveball.swf" type="application/x-shockwave-flash" width="620"></embed>
+    </div>
 
 <div class="text">
 <embed src="/dump/text.html">
