--- a/games/curveball.html
+++ b/games/curveball.html
@@ -12,10 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><script src="https://minecraftgamingbug.github.io/ruffleembedsetup112/ruffle/ruffle.js"></script>
-    <div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
-            <embed height="480" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="/swf/curveball.swf" type="application/x-shockwave-flash" width="620"></embed>
-    </div>
+<p align="center"><embed src="/swf/curveball.swf" width="900px" height="596px" style="border: 0px; border-radius: 0px; margin-top: 20px;" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
