--- a/games/curveball.html
+++ b/games/curveball.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/style.css">
 <meta charset="UTF-8">
-<script src="/swf/ruffle.js"></script>
+<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 
 <title>Classes</title>
 
