--- a/games/fella1.html
+++ b/games/fella1.html
@@ -28,6 +28,8 @@
 
 <p align="center"><iframe src="https://topminecraftservers.org/server/9374" id="iframe"></iframe></p>
 
+<p align="center"><iframe src="https://topminecraftservers.org/server/9374" id="iframe" style="margin-top: 1000px;"></iframe></p>
+
 <div class="text">
 <embed src="/dump/text.html">
 </div>" id="iframe"></iframe></p>
