--- a/extra/fella.html
+++ b/extra/fella.html
@@ -12,7 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="https://itch.io/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://minecraft-mp.com/server-s310595" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
