--- a/dump/text.html
+++ b/dump/text.html
@@ -10,11 +10,13 @@
     
 <div class="test1">
 <b><a href="/games/1v1-lol.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">1v1.lol</a><br>
+<b><a href="/games/basket-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Basket Random</a><br>
 <b><a href="/games/curveball.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Curveball</a><br>
 <b><a href="/games/eggy-car.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Eggy Car</a><br>
 <b><a href="/games/google-baseball.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Google Baseball</a><br>
 <b><a href="/games/gun-mayhem-2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Gun Mayhem 2</a><br>
 <b><a href="/games/kirka-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Kirka.io</a><br>
+<b><a href="/games/krunker-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Krunker.io</a><br>
 <b><a href="/games/moto-x3m.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M</a><br>
 <b><a href="/games/shell-shockers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Shell Shockers</a><br>
 <b><a href="/games/snow-rider-3d.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Snow Rider 3D</a><br>
