--- a/extra/fella.html
+++ b/extra/fella.html
@@ -14,7 +14,7 @@
 
 <p align="center"><iframe src="https://minecraft-mp.com/server-s310595" id="iframe"></iframe></p>
 
-<p align="center"><iframe src="https://minecraft-mp.com/server-s310595" id="iframe" style="margin-top: 1000px;"></iframe></p>
+<p align="center"><iframe src="https://minecraft-mp.com/server-s310595" id="iframe2"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
