--- a/extra/fella.html
+++ b/extra/fella.html
@@ -12,9 +12,9 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="https://minecraft-mp.com/server-s310595" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://minecraft-mp.com/server/310595/vote/" id="iframe"></iframe></p>
 
-<p align="center"><iframe src="https://minecraft-mp.com/server-s310595" id="iframe2"></iframe></p>
+<p align="center"><iframe src="https://minecraft-mp.com/server/310595/vote/" id="iframe2"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
