Lots of games!!

--- a/games/harry-potter-chamber-of-secrets.html
+++ b/games/harry-potter-chamber-of-secrets.html
@@ -12,7 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="https://spew45.github.io/simple-games-assets/src/slope-2/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/harry_potter_and_the_chamber_of_secrets.gba" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
