--- a/games/soccer-random.html
+++ b/games/soccer-random.html
@@ -12,7 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="spew45.github.io/simple-games-assets/src/soccer-random/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/simple-games-assets/src/soccer-random/" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
