--- a/dump/text.html
+++ b/dump/text.html
@@ -23,6 +23,7 @@
 <b><a href="/games/krunker-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Krunker.io</a><br>
 <b><a href="/games/moto-x3m.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M</a><br>
 <b><a href="/games/n-gon.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">N-Gon</a><br>
+<b><a href="/games/namco-museum.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Namco Museum</a><br>
 <b><a href="/games/retro-bowl.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Retro Bowl</a><br>
 <b><a href="/games/rooftop-snipers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Rooftop Snipers</a><br>
 <b><a href="/games/shell-shockers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Shell Shockers</a><br>
@@ -30,6 +31,7 @@
 <b><a href="/games/slope.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Slope</a><br>
 <b><a href="/games/snow-rider-3d.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Snow Rider 3D</a><br>
 <b><a href="/games/soccer-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soccer Random</a><br>
+<b><a href="/games/subway-surfers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Subway Surfers</a><br>
 <b><a href="/games/super-mario-bros.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Super Mario Bros.</a><br>
 <b><a href="/games/tanuki-sunset.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tanuki Sunset</a><br>
 <b><a href="/games/thps2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tony Hawk Pro Skater: 2</a><br>
