--- a/extra/fella.html
+++ b/extra/fella.html
@@ -14,7 +14,7 @@
 
 <p align="center"><iframe src="https://minecraft-mp.com/server/310595/vote/" id="iframe"></iframe></p>
 
-<p align="center"><iframe src="https://minecraft-mp.com/server/310595/vote/" id="iframe2"></iframe></p>
+<p align="center"><iframe src="https://minecraftlist.org/vote/29724" id="iframe2"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
