--- a/dump/text.html
+++ b/dump/text.html
@@ -27,6 +27,7 @@
 <b><a href="/games/n-gon.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">N-Gon</a><br>
 <b><a href="/games/namco-museum.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Namco Museum</a><br>
 <b><a href="/games/paper-io-2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Paper.io 2</a><br>
+<b><a href="/games/pixel-shooter.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Pixel Shooter</a><br>
 <b><a href="/games/retro-bowl.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Retro Bowl</a><br>
 <b><a href="/games/rooftop-snipers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Rooftop Snipers</a><br>
 <b><a href="/games/shell-shockers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Shell Shockers</a><br>
