--- a/games/cat-trap.html
+++ b/games/cat-trap.html
@@ -12,7 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="llerrah.com/cattrapgame1.htm" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://llerrah.com/cattrapgame1.htm" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
