--- a/games/retro-bowl.html
+++ b/games/retro-bowl.html
@@ -12,7 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="https://spew45.github.io/simple-games-assets/src/retro-bowl/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/simple-games-assets/src/retro-bowl/" id="iframe" height="506"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
