--- a/games/idle-mining-empire.html
+++ b/games/idle-mining-empire.html
@@ -12,7 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="https://html5.gamedistribution.com/899c82ac71ba4dd5a571fc9bc35f55f8/?gd_sdk_referrer_url=https://spew45.github.io/games/soccer-skills.html" id="iframe"></iframe></p>
+<p align="center"><iframe src="html5.gamedistribution.com/036ea308d90d43a1aed40716ae683c94/?gd_sdk_referrer_url=https://spew45.github.io/games/idle-mining-empire.html" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
