--- a/dump/text.html
+++ b/dump/text.html
@@ -24,7 +24,7 @@
 <b><a href="/games/gun-mayhem-2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Gun Mayhem 2</a><br>
 <b><a href="/games/harry-potter-sorcerers-stone.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Harry Potter: 1 (GBA)</a><br>
 <b><a href="/games/harry-potter-chamber-of-secrets.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Harry Potter: 2 (GBA)</a><br>
-<b><a href="/games/idle-mining-empire.html style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Mining Empire</a><br>
+    <b><a href="/games/idle-mining-empire.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Mining Empire</a><br>
 <b><a href="/games/kirka-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Kirka.io</a><br>
 <b><a href="/games/krunker-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Krunker.io</a><br>
 <b><a href="/games/monkey-mart.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Monkey Mart</a><br>
@@ -41,7 +41,7 @@
 <b><a href="/games/slope.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Slope</a><br>
 <b><a href="/games/snow-rider-3d.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Snow Rider 3D</a><br>
 <b><a href="/games/soccer-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soccer Random</a><br>
-<b><a href="/games/soccer-skills.html style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soccer Skills</a><br>
+<b><a href="/games/soccer-skills.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soccer Skills</a><br>
 <b><a href="/games/subway-surfers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Subway Surfers</a><br>
 <b><a href="/games/super-mario-bros.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Super Mario Bros.</a><br>
 <b><a href="/games/tanuki-sunset.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tanuki Sunset</a><br>
