--- a/games/retro-bowl.html
+++ b/games/retro-bowl.html
@@ -12,7 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="https://spew45.github.io/simple-games-assets/src/retro-bowl/" id="iframe" height="506"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/simple-games-assets/src/retro-bowl/" style="width: 900px; height: 506px; border: 0px; border-radius: 0px; margin-top: 20px;"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
