--- a/games/idle-mining-empire.html
+++ b/games/idle-mining-empire.html
@@ -12,7 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="html5.gamedistribution.com/036ea308d90d43a1aed40716ae683c94/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/idle-mining-empire.html" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://html5.gamedistribution.com/036ea308d90d43a1aed40716ae683c94/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/idle-mining-empire.html" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
