--- a/games/soccer-skills.html
+++ b/games/soccer-skills.html
@@ -12,7 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="https://html5.gamedistribution.com/899c82ac71ba4dd5a571fc9bc35f55f8/?gd_sdk_referrer_url=https://spew45.github.io/games/soccer-skills.html" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://html5.gamedistribution.com/899c82ac71ba4dd5a571fc9bc35f55f8/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/soccer-skills-2021.html" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
