--- a/games/test.html
+++ b/games/test.html
@@ -12,8 +12,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="https://html5.gamedistribution.com/036ea308d90d43a1aed40716ae683c94/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/idle-mining-empire.html" style="width: 900px; height: 506px; border: 0px; border-radius: 0px; margin-top: 20px;" id="iframe" class="myIframe"></iframe></p>
-
+<p align="center"><iframe src="https://html5.gamedistribution.com/036ea308d90d43a1aed40716ae683c94/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/idle-mining-empire.html" height="50%" width="50%" style="border: 0px; border-radius: 0px; margin-top: 20px;" id="iframe" class="myIframe"></iframe></p>
     <script type="text/javascript" language="javascript"> 
     $('.myIframe').css('height', $(window).height()+'px');
     </script>
