--- a/games/test.html
+++ b/games/test.html
@@ -4,6 +4,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/test.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 
 <title>Classes</title>
@@ -12,7 +13,7 @@
 
 <div class="border"></div>
 
-<p align="center"><iframe src="https://html5.gamedistribution.com/036ea308d90d43a1aed40716ae683c94/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/idle-mining-empire.html" style="width: 50%; height: 50%; border: 0px; border-radius: 0px; margin-top: 20px;" id="iframe" class="myIframe"></iframe></p>
+<p align="center"><iframe src="https://html5.gamedistribution.com/036ea308d90d43a1aed40716ae683c94/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/idle-mining-empire.html" id="iframe" class="myIframe"></iframe></p>
     <script type="text/javascript" language="javascript"> 
     $('.myIframe').css('height', $(window).height()+'px');
     </script>
