--- a/games/curveball.html
+++ b/games/curveball.html
@@ -13,7 +13,7 @@
 
 <div class="border"></div>
 
-<p align="center"><embed src="/swf/curveball.swf" width="900px" height="596px" style="border: 0px; border-radius: 0px; margin-top: 20px;" id="iframe"></iframe></p>
+<p align="center"><embed src="/swf/curveball.swf" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
