--- a/games/curveball.html
+++ b/games/curveball.html
@@ -13,7 +13,7 @@
 
 <div class="border"></div>
 
-<p align="center"><embed src="/swf/curveball.swf" id="iframe"></embed></p>
+<p align="center"><embed src="/swf/curveball.swf" style="width: 900px; height: 600px; border: 0px; border-radius: 0px; margin-top: 20px;"id="iframe"></embed></p>
 
 <div class="text">
 <embed src="/dump/text.html">
