--- a/games/test.html
+++ b/games/test.html
@@ -3,9 +3,10 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/css/test.css">
+<link rel="stylesheet" href="/css/style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
+<script src="/js/main.js"></script>
 
 <title>Classes</title>
 
@@ -18,3 +19,5 @@
 <div class="text">
 <embed src="/dump/text.html">
 </div>
+
+<b><a href="openGame()" style="text-decoration: none; position: absolute; top: 25px; left: 25px; color: blueviolet;"></a>
