--- a/games/test.html
+++ b/games/test.html
@@ -20,4 +20,4 @@
 <embed src="/dump/text.html">
 </div>
 
-<b><a href="openGame();" style="text-decoration: none; position: absolute; top: 25px; left: 25px; color: blueviolet;">Open Game</a>
+<b><a onclick="openGame();" style="text-decoration: none; position: absolute; top: 25px; left: 25px; color: blueviolet;">Open Game</a>
