--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/style.css">
+<meta name="description" content="A website with games for all your math education needs!">
+<meta name="keywords" content="spew45, ubg, minecraft unblocked, retro bowl unblocked, retro bowl, money mart, money mart unblocked,">
+<meta name="news_keywords" content="UBG, Unblocked Games, Games, Eazy Games, 3D Games, Games for math, school games, spew45.github.io,">
 <meta charset="UTF-8">
+
 
 <title>Homepage</title>
 
