--- a/games/test.html
+++ b/games/test.html
@@ -3,7 +3,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/test.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
@@ -25,3 +25,13 @@
 </div>
 
 <b><a onclick="openGame();" style="cursor: pointer; position: absolute; top: 15px; right: 25px; font-family: 'Poppins', sans-serif; font-size: 24px; color: #fff; text-decoration: none;" target="_parent">Cloak Link</a>
+
+<div class="dropdown">
+  <button class="dropbtn" style="position: absolute; top: 15px; right: 25px; font-family: 'Poppins', sans-serif;">Dropdown
+  	<i class="fa fa-caret-down"></i></button>
+  <div class="dropdown-content">
+    <a href="#">Cloak Link</a>
+    <a href="#">Fullscreen</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
