--- a/games/test.html
+++ b/games/test.html
@@ -18,18 +18,17 @@
 
 <div class="border"></div>
 
+<div class="dropdown" style="float:right;">
+  <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+
 <p align="center"><iframe src="https://html5.gamedistribution.com/036ea308d90d43a1aed40716ae683c94/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/idle-mining-empire.html" id="iframe"></iframe></p>
 
 <div class="text">
 <embed src="/dump/text.html">
-</div>
-
-<div class="dropdown">
-  <button class="dropbtn" style="position: absolute; top: 15px; right: 25px; font-family: 'Poppins', sans-serif;">Dropdown
-  	<i class="fa fa-caret-down"></i></button>
-  <div class="dropdown-content">
-    <a href="#">Cloak Link</a>
-    <a href="#">Fullscreen</a>
-    <a href="#">Link 3</a>
-  </div>
 </div>
