--- a/games/test.html
+++ b/games/test.html
@@ -21,9 +21,9 @@
 <div class="dropdown" style="float:right;">
   <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
   <div class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="#" style="font-family: 'Poppins', sans-serif;">Fullscreen</a>
+    <a href="#" style="font-family: 'Poppins', sans-serif;">Cloak Link</a>
+    <a href="#" style="font-family: 'Poppins', sans-serif;">Panic</a>
   </div>
 </div>
 
