--- a/games/test.html
+++ b/games/test.html
@@ -23,7 +23,7 @@
   <div class="dropdown-content">
     <a href="#" style="font-family: 'Poppins', sans-serif;">Fullscreen</a>
     <a href="#" style="font-family: 'Poppins', sans-serif;">Cloak Link</a>
-    <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" font-family: 'Poppins', sans-serif;">Panic</a>
+    <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
   </div>
 </div>
 
