--- a/games/test.html
+++ b/games/test.html
@@ -22,7 +22,7 @@
   <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
   <div class="dropdown-content">
     <a href="#" style="font-family: 'Poppins', sans-serif;">Fullscreen</a>
-    <a href="#" style="font-family: 'Poppins', sans-serif;">Cloak Link</a>
+    <a href="openGame();" style="font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
     <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
   </div>
 </div>
