--- a/games/curveball.html
+++ b/games/curveball.html
@@ -18,10 +18,20 @@
 
 <div class="border"></div>
 
+<div class="dropdown" style="float:right;">
+    <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
+    <div class="dropdown-content">
+      <a onclick="openFullscreen();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;">Fullscreen</a>
+      <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
+      <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
+    </div>
+  </div>
+
 <p align="center"><embed src="/swf/curveball.swf" style="width: 900px; height: 600px; border: 0px; border-radius: 0px; margin-top: 20px;"id="iframe"></embed></p>
+
+<script src="/js/test.js"></script>
 
 <div class="text">
 <embed src="/dump/text.html">
 </div>
 
-<b><a onclick="openGame();" style="cursor: pointer; position: absolute; top: 15px; right: 25px; font-family: 'Poppins', sans-serif; font-size: 24px; color: #fff; text-decoration: none;" target="_parent">Cloak Link</a>
