--- a/games/kirka-io.html
+++ b/games/kirka-io.html
@@ -4,6 +4,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <script src="/js/main.js"></script>
 <style>
@@ -19,8 +21,8 @@
 
 <p align="center"><iframe src="https://kirka.io/" id="iframe"></iframe></p>
 
+<script src="/js/test.js"></script>
+
 <div class="text">
 <embed src="/dump/text.html">
 </div>
-
-<b><a onclick="openGame();" style="cursor: pointer; position: absolute; top: 15px; right: 25px; font-family: 'Poppins', sans-serif; font-size: 24px; color: #fff; text-decoration: none;" target="_parent">Cloak Link</a>
