--- a/index.html
+++ b/index.html
@@ -7,18 +7,29 @@
 <meta name="description" content="A website with games for all your math education needs!">
 <meta name="keywords" content="spew45, ubg, minecraft unblocked, retro bowl unblocked, retro bowl, money mart, money mart unblocked,">
 <meta name="news_keywords" content="UBG, Unblocked Games, Games, Eazy Games, 3D Games, Games for math, school games, spew45.github.io,">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <script src="/js/main.js"></script>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 </style>
 
-
 <title>Homepage</title>
 
 <body style="background-color: #001b2e;"></body>
 
 <div class="border"></div>
+
+<div class="dropdown" style="float:right;">
+  <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
+  <div class="dropdown-content">
+    <a onclick="openFullscreen();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;">Fullscreen</a>
+    <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
+    <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
+  </div>
+</div>
+
 
 <script src="/js/test.js"></script>
 
