--- a/dump/text.html
+++ b/dump/text.html
@@ -29,6 +29,7 @@
 <b><a href="/games/idle-mining-empire.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Mining Empire</a><br>
 <b><a href="/games/kirka-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Kirka.io</a><br>
 <b><a href="/games/krunker-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Krunker.io</a><br>
+<b><a href="/games/mario-kart.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Mario Kart</a><br>
 <b><a href="/games/monkey-mart.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Monkey Mart</a><br>
 <b><a href="/games/moto-x3m-winter.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M Winter</a><br>
 <b><a href="/games/moto-x3m.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M</a><br>
