--- a/games/monkey-mart.html
+++ b/games/monkey-mart.html
@@ -27,7 +27,7 @@
   </div>
 </div>
 
-<p align="center"><iframe src="https://monkeymart.io/monkey-mart.embed" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://html5.gamemonetize.co/ugi7ftbv2kgodcq7vful9u9v34wein5z/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
 
