--- a/dump/text.html
+++ b/dump/text.html
@@ -38,6 +38,7 @@
 <b><a href="/games/paper-io-2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Paper.io 2</a><br>
 <b><a href="/games/pixel-shooter.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Pixel Shooter</a><br>
 <b><a href="/games/retro-bowl.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Retro Bowl</a><br>
+<b><a href="/games/rooftop-battles.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Rooftop Battles</a><br>
 <b><a href="/games/rooftop-snipers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Rooftop Snipers</a><br>
 <b><a href="/games/shell-shockers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Shell Shockers</a><br>
 <b><a href="/games/simpsons-road-rage.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Simpsons: Road Rage</a><br>
