--- a/games/cookie-clicker.html
+++ b/games/cookie-clicker.html
@@ -27,7 +27,7 @@
   </div>
 </div>
 
-<p align="center"><iframe src="cookie-clicker/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/Stuff/projects/cookie-clicker/index.html" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
 
